--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -1,3 +1,5 @@
+/* Body */
+
 html, body {
     font-family: 'Montserrat', sans-serif;
     width: 100%;
@@ -12,6 +14,28 @@ html, body {
     align-items: center;
 }
 
+/* GitHub badges */
+
 .github {
     padding-top: 0.5em;
+}
+
+/* Form */
+
+#apiForm {
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+#apiForm div {
+    padding-bottom: 0.5em;
+}
+
+#apiForm button {
+    color: #000;
+    background-color: #ccc;
+}
+
+#apiForm .auto-center {
+    margin: 0 auto !important;
 }
